--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-# 应用名称
-spring.application.name=rancher-repo
-# 应用服务 WEB 访问端口
-server.port=8080
-
+server:
+  port: 30000
+spring:
+  application:
+    name: rancher-repo
 
